--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -4,7 +4,7 @@
   %img{ style:"display:inline; height:115px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
   %span{ style: "font-size: 50px;position: relative;top:13px;" } Notification Settings
   %hr{style:"margin:0;"}
-  = form_for(@notification_settings, url: notification_settings_path(@user.signup_token), html: { class: "form-horizontal", style: "margin-top: 10px;" }) do |f|
+  = form_for(@notification_settings, url: notifications_user_path(@user.signup_token), html: { class: "form-horizontal", style: "margin-top: 10px;" }) do |f|
     = render 'shared/error_messages', object: f.object
     %div.notificationpanelbody
       %h4 When do you want to receive emails from MetaBright?
