--- a/app/views/mailer/_notification_settings.html.haml
+++ b/app/views/mailer/_notification_settings.html.haml
@@ -2,7 +2,7 @@
   %span{style:"font-size:10px; color:gray;"}
     You are receiving this message because #{@user.email} is a member of MetaBright. To adjust your email settings or to unsubscribe, 
   %span{style:"font-size:10px;"}
-    = link_to "click here.", notification_settings_url(@user.signup_token)
+    = link_to "click here.", notifications_user_url(@user.signup_token)
   %span{style:"font-size:10px; color:gray;"} 
     MetaBright, Inc. 500 Oak Street, Suite 5, San Francisco, CA, 94102
 - else
