--- a/app/views/users/professional.html.haml
+++ b/app/views/users/professional.html.haml
@@ -4,7 +4,7 @@
   %img{ style:"display:inline; height:115px;", src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
   %span{ style: "font-size: 50px;position: relative;top:13px;" } Professional Settings
   %hr{style:"margin:0;"}
-  = form_for(@user, url: professional_settings_path(@user.signup_token), html: { class: "form-horizontal", style: "margin-top: 10px;" }) do |f|
+  = form_for(@user, url: professional_user_path(@user.signup_token), html: { class: "form-horizontal", style: "margin-top: 10px;" }) do |f|
     = render 'shared/error_messages', object: f.object
     %div.notificationpanelbody
       %h4{ style: "display: inline-block; margin-bottom: 20px;  "} You #{@user.professional_enabled? ? "have" : "haven't"} enabled MetaBright to match you with opportunities that fit your skills.
