--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -67,7 +67,7 @@
             - current_user_in_top = true if current_user && user.id == current_user.id 
             %li
               %span.rank= (i+1).to_s
-              = image_tag user.picture, alt: "#{user.name}" 
+              = image_tag user.picture, alt: "#{user.name}", onerror: "user_img_error(this);" 
               = link_to truncate(user.name, length: 22), hovercard_user_path(user.username), remote: true, class: "name hovercard_link"
               %span.level lvl. #{Enrollment.points_to_level(user.total_points.to_i)}
               %span.points= user.total_points
