--- a/app/views/shared/_mosaic.html.haml
+++ b/app/views/shared/_mosaic.html.haml
@@ -6,4 +6,4 @@
         %h4= truncate(title, length: 25)
         %h5= truncate(subtitle, length: 30)
     %div
-      %img.mosaic-backdrop.clip_pic{ src: pic }
+      %img.mosaic-backdrop.clip_pic{ src: pic, onerror: "user_img_error(this);" }
