--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -74,8 +74,7 @@ $landing_green: #73bb6e;
             }
             .button { 
               padding: 5px 20px;
-              height: 20px; 
-              line-height: 20px;
+              height: 30px; 
               float: right; 
               background-color: #254972;
               border-width: 0;
@@ -84,6 +83,7 @@ $landing_green: #73bb6e;
               font-family: 'MuliLight';
         
               &:active { position: relative; top: 1px; };
+              &:focus { outline: 0;};
             }
             a { 
               color: inherit;
