--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -26,13 +26,12 @@
               .option
                 %h4 I want to be discovered.
                 %p MetaBright is the game that can get you a job. Showcase your skills and compete against others.
-                .button{ onclick: "goto('#consumer_slide', this); return false" } Get Started
+                %button.button{ onclick: "goto('#consumer_slide', this); return false" } Get Started
             .row-fluid.employer
               .option{ "data-no-turbolink" => true } 
                 %h4 I want to test my candidates.
                 %p The MetaBright Evaluator validates the skills of your job candidates before you interview them.
-                .button
-                  = link_to "Learn More", evaluator_path
+                %button.button{ onclick: "document.location.href = '/evaluator';"} Learn More
         #consumer_slide
           .span12
             %h3 Take Challenges to measure and showcase your skills.
