--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -99,9 +99,9 @@
                   - else
                     %div Completed
                 - elsif current_user
-                  = link_to "Enter Location", "", class: "button button-small button-actionable disabled"
+                  = link_to "Enter Location", "", class: "button disabled button-small button-actionable"
                 - else
-                  = link_to "Signup to Begin", "", class: "button button-small button-actionable disabled"
+                  = link_to "Sign up to begin", "", class: "button disabled button-small button-actionable"
       .step
         .img-circle
           %span 4
