--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -19,7 +19,7 @@
                 Prove your skills. 
                 %br
                 Be discovered.
-              %h3 We believe that people should be hired on the basis of what they can actually do.
+              %h3 MetaBright is a skill assessment platform that makes it easier to hire and be hired.
             .triangle
           .span5
             .row-fluid.consumer
