--- a/app/assets/stylesheets/employer.css.scss
+++ b/app/assets/stylesheets/employer.css.scss
@@ -2,7 +2,7 @@
 
 body.employer { background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
 body.employer .container.body { width: inherit; background-color: transparent; padding: 0px; }
-.employer-container { width: 980px; border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); height: 100%; padding-top:1px;}
+.employer-container { width: 980px; border: 1px solid rgba(0, 0, 0, 0.1); border-radius: 0px; margin: 25px auto 0 auto; background-color: rgba(36, 72, 109, 0.8); height: 100%; padding-top:1px;}
 .documentation { padding: 10px 20px; }
 
 .employer-box {
@@ -18,7 +18,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     margin-bottom: 10px;
     
     .stoney { height: 72px; margin-top: -15px; }
-    h2 { display: inline-block; font-size: 30px; }
+    h2 { display: inline-block; font-size: 32px; position: relative; top: 8px; left: 5px; }
     hr { margin: 8px; }
     input { float: right; border-radius: 0; margin: 10px 10px 0 0; padding: 7px 7px; font-size: 17px; }
   }
@@ -92,7 +92,7 @@ body.employer .container.body { width: inherit; background-color: transparent; p
     }
   }
   .eval_url {
-    width: 36%; 
+    width: 35.2%; 
     overflow: hidden;
     
     input {
