--- a/app/views/groups/account.html.haml
+++ b/app/views/groups/account.html.haml
@@ -23,8 +23,8 @@
 .employer-container
   .employer-box
     .header
-      %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", class: "stoney", alt: "Stoney"}
-      %h2 #{@group.name} Account
+      = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
+      %h2 #{@group.name}'s Account
       %input{ type: "text", placeholder: "Search account...", id: "account_search" }
     #account_table.users
       = render "account_table"
