csv upload screen styles

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -423,6 +423,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 .headerspace { text-shadow: 0 1px 0 white; padding: 12px 0 12px 12px; font:bold 11px arial, sans-serif; text-transform: uppercase; border-bottom: 1px solid #DDD; border-top-left-radius: 6px; border-top-right-radius: 6px; background-color: #FCFCFC;}
 #carouselupdatespace {background-color: whitesmoke;border-bottom-left-radius: 6px;border-bottom-right-radius: 6px;padding: 16px 0 3px 12px; }
 /* modal/help close button/Revolution*/
+#path_batch_file { margin-left: 2px; line-height: inherit; font-size: 13px; padding-top: 0px; height: inherit; vertical-align: middle; width: 200px;}
 .exploreheader>.modal_close{ margin: -8px 6px 0 0; }
 .modal_close, .help_close { float:right; cursor:pointer;}
 .modal_close, .help_close img{ width:20px; height: inherit;}
