--- a/app/views/admin/users.html.haml
+++ b/app/views/admin/users.html.haml
@@ -12,7 +12,7 @@
         %th
         %th
     %tbody
-      - @users.to_a.each do |u|
+      - @users.to_a.compact.each do |u|
         %tr
           %td= link_to truncate(u.name, length: 20), profile_path(u.username)
           %td= truncate(u.email, length:25)
