empty personas dont display on profile

--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -16,7 +16,7 @@
     %h3 Upload Questions
   .modal-body{ style: "max-height: none; "}
     = form_for(@path, url: upload_path_url(@path), method: :patch) do |f|
-      %label.control-label Select .CSV file to upload questions to Challenge
+      %label.control-label{ style: "font-size: 14px;" } Select .CSV file to upload questions to Challenge
       .controls= f.file_field :batch_file
     %hr{ style: "margin: 10px 0; "}
     %div{ style: "float:right;" }
