--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -228,7 +228,7 @@
                 = render "newsfeed/feed", feed: enrollment_details[:tasks]
             
             %div{ style: "font-size: 12px; text-align: right; margin-top: 15px;" }
-              %p= link_to "Find more #{enrollment.path.name} experts at MetaBright"
+              %p= link_to "Find more #{enrollment.path.name} experts at MetaBright", challenge_path(enrollment.path.permalink)
                 
     
 
