--- a/app/views/paths/new_group.haml
+++ b/app/views/paths/new_group.haml
@@ -10,7 +10,7 @@
 .employer-container{ style: "width: 880px;"}
   #create_evaluation.employer-box
     .header
-      = image_tag STONEY_SMALL_URL, class: "stoney", alt: "Stoney"
+      = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
       %h2 Create a Challenge
     
     %div{ style: "width: 86%; text-align: center; margin: 20px auto 0 auto; padding: 0 7% 0 7%;" }
