--- a/app/views/groups/signup/confirmation.html.haml
+++ b/app/views/groups/signup/confirmation.html.haml
@@ -51,5 +51,5 @@
                 = link_to "Manage your account", account_group_url(@group), class: "submit_button", style: "float: inherit;"
               - else
                 = link_to "Invite people to your account", account_group_url(@group), class: "submit_button", style: "float: inherit;"
-      %p If you need help getting going, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
+      %p If you need a hand getting going, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
       
